syntax = "proto3";

package store;

message Product {
    string id = 1;
    string title = 2;
    string description = 3;
    repeated string tags = 4;
    int32 rating = 5;
}

message ProductList {
    repeated Product products = 1;
}